[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Art/Block Ninja/Spritesheet.PNG" type="Texture" id=2]
[ext_resource path="res://Audio/Open_01.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/Hero_Death_00.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/SFX_Jump_09.wav" type="AudioStream" id=5]
[ext_resource path="res://Art/City Background/Sky.png" type="Texture" id=6]
[ext_resource path="res://Art/City Background/City Background.png" type="Texture" id=7]
[ext_resource path="res://Art/City Background/City Foreground.png" type="Texture" id=8]
[ext_resource path="res://Components/Blood.tscn" type="PackedScene" id=9]
[ext_resource path="res://Art/light.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]

resource_name = "Attack"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 88, 88, 88 ), Rect2( 88, 88, 88, 88 ), Rect2( 0, 88, 88, 88 ) ]
}

[sub_resource type="Animation" id=2]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 88, 264, 88, 88 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.117895, 1 ),
"update": 0,
"values": [ 0.0, -88.8575 ]
}

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 88, 88 ) ]
}

[sub_resource type="Animation" id=4]

length = 0.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 88, 88 ), Rect2( 88, 0, 88, 88 ), Rect2( 176, 0, 88, 88 ), Rect2( 264, 0, 88, 88 ), Rect2( 352, 0, 88, 88 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 27.6636, 35.8604 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]

input_pickable = false
collision_layer = 3
collision_mask = 3
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
GRAVITY = 2400
SPEED = 30000
JUMP_SPEED = -950

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 88, 88, 88 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.5
anims/Attack = SubResource( 1 )
anims/Death = SubResource( 2 )
anims/Jump = SubResource( 3 )
anims/Run = SubResource( 4 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

shape = SubResource( 5 )

[node name="RayLeft" type="RayCast2D" parent="." index="3"]

position = Vector2( -26.1751, 34.6249 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 10 )
collision_mask = 1

[node name="RayRight" type="RayCast2D" parent="." index="4"]

position = Vector2( 26.5034, 34.6249 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 10 )
collision_mask = 1

[node name="Sfx" type="Node2D" parent="." index="5"]

[node name="Jump" type="AudioStreamPlayer" parent="Sfx" index="0"]

stream = ExtResource( 3 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Death" type="AudioStreamPlayer" parent="Sfx" index="1"]

stream = ExtResource( 4 )
volume_db = -10.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Throw" type="AudioStreamPlayer" parent="Sfx" index="2"]

stream = ExtResource( 5 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="ParallaxBackground" type="ParallaxBackground" parent="." index="6"]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 100, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 0.5, 0.5 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = false
_sections_unfolded = [ "Scroll" ]

[node name="TextureRect2" type="TextureRect" parent="ParallaxBackground" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 2
_sections_unfolded = [ "Rect" ]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground" index="1"]

motion_scale = Vector2( 1, 1 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 2518, 0 )
_sections_unfolded = [ "Motion" ]

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground" index="2"]

position = Vector2( -490.089, 34.1531 )
motion_scale = Vector2( 1.1, 1.1 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 2518, 0 )
_sections_unfolded = [ "Motion" ]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -448.0
margin_top = -152.0
margin_right = 2070.0
margin_bottom = 648.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
stretch_mode = 2
_sections_unfolded = [ "Rect" ]

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground" index="3"]

motion_scale = Vector2( 1.2, 1.2 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 2518, 0 )
_sections_unfolded = [ "Motion", "Transform" ]

[node name="TextureRect2" type="TextureRect" parent="ParallaxBackground/ParallaxLayer3" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -448.0
margin_top = -121.0
margin_right = 2070.0
margin_bottom = 1023.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 8 )
expand = true
stretch_mode = 2
_sections_unfolded = [ "Rect" ]

[node name="Blood" parent="." index="7" instance=ExtResource( 9 )]

[node name="Timer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="Light2D" type="Light2D" parent="." index="9"]

enabled = true
editor_only = false
texture = ExtResource( 10 )
offset = Vector2( 0, 0 )
texture_scale = 2.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Shadow" ]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


